--- a/4-solucion.tex
+++ b/4-solucion.tex
@@ -88,7 +88,7 @@ Posteriormente a esto, en el mismo archivo hay que indicarle las direcciones IP 
 
 Así pues, esta es la forma final que tiene nuestro archivo de configuración:\\
 
-\begin{lstlisting}[caption=Archivo de configuracion]
+\begin{lstlisting}[caption=Archivo de configuración]
 # Ice-JS
 Ice.Plugin.IceWS=IceWS:createIceWS
 
