--- a/1-introduccion.tex
+++ b/1-introduccion.tex
@@ -113,7 +113,7 @@ Posteriormente esa información es analizada estadísticamente para generar patr
 \end{figure}
 
 
-\subsubsection{Entrega de paquetes a través de drones.}
+\subsubsection{Entrega de paquetes con drones.}
 
 La entrega de paqueteria usando vehiculos aéreos no tripulados es el futuro, aunque ya muy presente en cuanto a la entrega de paquetes a domicilio se refiere. Las funcionalidades son muy numerosas, desde entrega de comida o compras realizadas a domicilio, hasta entrega de medicamentos o comida a personas en apuros o situaciones peligrosas.\\
 
@@ -187,7 +187,7 @@ La empresa francesa Parrot, la cual tiene una flota de diversos modelos de drone
 
 
 
-\section{Tecnologías de Comunicación Tiempo Real}
+\section{Tecnologías de Comunicación en Tiempo Real}
 
 En la actualidad  existen numerosas tecnologías de comunicación en tiempo real, pero nos centraremos en las que nos ofrecen conectividad multimedia. Primero veremos protocolos que se pueden implementar en aplicaciones de escritorio, y posteriormente veremos los protocolos web mas actuales.\\
 
@@ -267,13 +267,13 @@ Esta tecnología nos brinda la capacidad de crear numerosas aplicaciones de comu
 
 
 
-\section{Motivación y punto de partida}
+\section{Motivación y antecedentes}
 
 En estos últimos años el desarrollo de vehículos no tripulados ha tenido un avance muy significativo, sobre todo en aplicaciones de uso civil. Uno de los campos en los que más ha despuntado es en el uso para la grabación de cualquier tipo de eventos, tanto a nivel profesional como a nivel \emph{amateur}.\\
 
 Las tecnologías web son otro campo que ha experimentado un avance enorme en los últimos años, permitiendo crear aplicaciones mas complejas y elaboradas. Estas aplicaciones a la vez de ser mas potentes se pueden implementar directamente en un navegador, sin necesidad de ningún tipo de instalación en el ordenador del cliente.\\
 
-Como amante de las nuevas tecnologías web, y aficionado a la robótica en general y a los cuadricópteros en particular, la posibilidad de aunar estos dos campos son para mi un gran aliciente y un gran reto a la vez. El fondo del proyecto consiste es desarrollar una aplicación web con tecnologías de última generación que permita teleoperar el drone.\\
+El fondo del proyecto consiste aunar estos dos campos. Se pretende desarrollar una aplicación web con tecnologías de última generación que permita teleoperar el drone.\\
 
 Como base para el proyecto para desarrollar la aplicación web tenemos los siguientes proyectos, desarrollados también por alumnos de la URJC.\\
 
@@ -346,4 +346,4 @@ Esta plataforma está desarrollada por Aitor Martínez como su Trabajo Fin de Gr
 En el proyecto que aquí se presenta se desarrolla una aplicación web capaz de teleoperar un cuadricoptero usando los servidores desarrollados por JdeRobot para conectarnos al drone, sus sensores y actuadores, y añadiendo la tecnología web de última generación \emph{WebRTC} para establecer la conexión entre el ordenador que se comunicará con el drone y el ordenador remoto, desde el cuál se podrán ver los valores de los sensores y la cámara a bordo del drone, además como ya he mencionado, de teleoperarlo. Estas conexiones se realizarán sin el uso de servidor intermedio, usando tecnologías en tiempo real que se conectarán mediante \emph{WebSockets} de \emph{JavaScript}.\\
 
 
-
+Una vez presentada la introducción y el contexto del proyecto en este capitulo, continuamos exponiendo los objetivos que nos hemos marcado en este proyecto. En el capítulo tres se habla sobre las infraestructuras software de las que disponemos y de las que podremos ayudarnos para el desarrollo del proyecto. Posteriormente en el capítulo cuatro veremos como hemos conseguido cumplir los objetivos marcados, exponiendo en el capítulo cinco las pruebas y experimentos que hemos realizado. En el sexto y último capitulo presentaremos las conclusiones del proyecto.\\
